--- a/Angry Fruit Vendor/build.gradle
+++ b/Angry Fruit Vendor/build.gradle
@@ -59,6 +59,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
+        compile 'com.google.android.gms:play-services:7.5.0'
     }
 }
 
